FKS-1633 added role and membership start and end dates