@@ -18,12 +18,10 @@ import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
-
 @Slf4j
 @Service
 public class AdmMembershipService {
-    private final FintCache<String , User> userCache;
+    private final FintCache<String, User> userCache;
     private final UserService userService;
     private final FintCache<String, PersonalressursResource> personalressursResourceCache;
     private final OrganisasjonselementService organisasjonselementService;
@@ -35,7 +33,7 @@ public class AdmMembershipService {
 
     public AdmMembershipService(
             FintCache<String, User> userCache, UserService userService, FintCache<String,
-            PersonalressursResource> personalressursResourceCache,
+                    PersonalressursResource> personalressursResourceCache,
             OrganisasjonselementService organisasjonselementService,
             RoleService roleService,
             //RoleCatalogRoleService roleCatalogRoleService,
@@ -53,11 +51,23 @@ public class AdmMembershipService {
         this.membershipService = membershipService;
     }
 
-    public List<Membership> createOrgUnitMembershipList ( OrganisasjonselementResource organisasjonselementResource, Date currentTime ) {
+    private static List<Membership> getUniqueMemberships(List<Membership> allMemberships) {
+        return allMemberships
+                .stream()
+                .collect(Collectors.toMap(Membership::getMemberId,
+                        Function.identity(),
+                        (a, b) -> "ACTIVE".equalsIgnoreCase(a.getMemberStatus()) ? a : b,
+                        LinkedHashMap::new))
+                .values()
+                .stream()
+                .toList();
+    }
+
+    public List<Membership> createOrgUnitMembershipList(OrganisasjonselementResource organisasjonselementResource, Date currentTime) {
 
         log.info("Creating Membership list for org unit {} ({})"
                 , organisasjonselementResource.getOrganisasjonsId().getIdentifikatorverdi()
-                ,organisasjonselementResource.getOrganisasjonsKode().getIdentifikatorverdi());
+                , organisasjonselementResource.getOrganisasjonsKode().getIdentifikatorverdi());
 
 
         List<Membership> allMemberships = organisasjonselementService.getAllArbeidsforhold(organisasjonselementResource)
@@ -65,10 +75,8 @@ public class AdmMembershipService {
                 .map(arbeidsforholdResource -> createOrgUnitMembership(organisasjonselementResource, arbeidsforholdResource, currentTime))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .peek(Membership -> {
-                    log.info("Membership with memberid {} has status {}",
-                            Membership.getMemberId(), Membership.getMemberStatus());
-                } )
+                .peek(membership -> log.info("Membership with memberId {} has status {}",
+                        membership.getMemberId(), membership.getMemberStatus()))
                 .toList();
 
         return getUniqueMemberships(allMemberships);
@@ -76,9 +84,8 @@ public class AdmMembershipService {
 
     public List<Membership> createAggregatedOrgUnitMembershipList(Role role) {
 
-        log.info("Start creating membership list aggregated role for {} orgUnit Id {}"
-                ,role.getOrganisationUnitName()
-                , role.getOrganisationUnitId());
+        log.info("Start creating membership list aggregated role for {} orgUnit Id {}", role.getOrganisationUnitName(),
+                role.getOrganisationUnitId());
 
         Optional<RoleCatalogRole> aggregatedRoleCatalogRole = roleCatalogRoleCache.getOptional(role.getRoleId());
 
@@ -104,15 +111,14 @@ public class AdmMembershipService {
                         aggregatedRoleId,
                         membership.getMemberId(),
                         membership.getMemberStatus(),
-                        membership.getMemberStatusChanged())
+                        membership.getStartDate(),
+                        membership.getEndDate())
                 )
-                .peek(membership -> {
-                    log.info("Aggregated membership roleid {} memberid {} has status {}",
-                            membership.getRoleId(),
-                            membership.getMemberId(),
-                            membership.getMemberStatus());
-                } )
-                .collect(toList());
+                .peek(membership -> log.info("Aggregated membership roleid {} memberid {} has status {}",
+                        membership.getRoleId(),
+                        membership.getMemberId(),
+                        membership.getMemberStatus()))
+                .toList();
 
         List<Membership> unigueMemberships = getUniqueMemberships(allMemberships);
 
@@ -121,6 +127,7 @@ public class AdmMembershipService {
 
         return unigueMemberships;
     }
+
     private Optional<Membership> createOrgUnitMembership(
             OrganisasjonselementResource organisasjonselementResource,
             ArbeidsforholdResource arbeidsforholdResource,
@@ -149,7 +156,7 @@ public class AdmMembershipService {
         }
         RoleCatalogRole roleCatalogRole = optionalRoleCatalogRole.get();
 
-        if (roleCatalogRole.getRoleStatus()==null) {
+        if (roleCatalogRole.getRoleStatus() == null) {
             log.warn("Role catalog role found, but role status not found for role {}. Org unit role membership not created",
                     roleId
             );
@@ -164,7 +171,6 @@ public class AdmMembershipService {
             );
             return Optional.empty();
         }
-;
         Optional<User> user = userService.getUser(personalressursResource.get().getAnsattnummer().getIdentifikatorverdi());
 
         if (user.isEmpty()) {
@@ -180,9 +186,10 @@ public class AdmMembershipService {
             );
             return Optional.of(
                     membershipService.createMembership(optionalRoleCatalogRole.get(),
-                    user.get(),
-                    "INACTIVE",
-                    roleCatalogRole.getRoleStatusChanged())
+                            user.get(),
+                            "INACTIVE",
+                            arbeidsforholdResource.getGyldighetsperiode().getStart(),
+                            arbeidsforholdResource.getGyldighetsperiode().getSlutt())
             );
         }
         String userStatus = user.get().getStatus();
@@ -190,31 +197,21 @@ public class AdmMembershipService {
         if (userStatus != null && !userStatus.equals("ACTIVE")) {
             return Optional.of(
                     membershipService.createMembership(optionalRoleCatalogRole.get(),
-                    user.get(),
-                    userStatus,
-                    user.get().getStatusChanged())
+                            user.get(),
+                            userStatus,
+                            arbeidsforholdResource.getGyldighetsperiode().getStart(),
+                            arbeidsforholdResource.getGyldighetsperiode().getSlutt())
             );
         }
         MembershipStatus membershipStatus = MembershipUtils.getArbeidsforholdStatus(arbeidsforholdResource, currentTime);
 
         return Optional.of(
                 membershipService.createMembership(
-                optionalRoleCatalogRole.get(),
-                user.get(),
-                membershipStatus.status(),
-                membershipStatus.statusChanged())
+                        optionalRoleCatalogRole.get(),
+                        user.get(),
+                        membershipStatus.status(),
+                        arbeidsforholdResource.getGyldighetsperiode().getStart(),
+                        arbeidsforholdResource.getGyldighetsperiode().getSlutt())
         );
     }
-    private static List<Membership> getUniqueMemberships(List<Membership> allMemberships) {
-        return allMemberships
-                .stream()
-                .collect(Collectors.toMap(Membership::getMemberId,
-                        Function.identity(),
-                        (a, b) -> "ACTIVE".equalsIgnoreCase(a.getMemberStatus()) ? a : b,
-                        LinkedHashMap::new))
-                .values()
-                .stream()
-                .toList();
-    }
 }
-
